force-app/main/default/objects/Sales_Contest_Metrics__c/Sales_Contest_Metrics__c.object-meta.xml
<CustomObject>
    <label>Sales Contest Metrics</label>
    <nameField>
        <displayFormat>CM -{00000}</displayFormat>
        <label>Contest Metric</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Contest Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>