force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Activity_Points__c.field-meta.xml
<CustomField>
    <fullName>Activity_Points__c</fullName>
    <label>Activity Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>