force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Contestant_s_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contestant_s_Sales_Manager__c</fullName>
    <formula>Owner:User.Sales_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contestant&apos;s Sales Manager</label>
    <type>Text</type>
</CustomField>