force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Contestant_s_VP__c.field-meta.xml
<CustomField>
    <fullName>Contestant_s_VP__c</fullName>
    <formula>Owner:User.Sales_VP__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contestant&apos;s VP</label>
    <type>Text</type>
</CustomField>