force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Contestant_type__c.field-meta.xml
<CustomField>
    <fullName>Contestant_type__c</fullName>
    <formula>text(Owner:User.Contestant_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contestant type</label>
    <type>Text</type>
</CustomField>