force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Main_Contact_Health__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Health__c</fullName>
    <label>Main Contact Health Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>