force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Opportunities_Created_Points__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Created_Points__c</fullName>
    <label>Opportunities Created Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>