force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Pipeline_Health_Past_Due_Points__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Health_Past_Due_Points__c</fullName>
    <label>Pipeline Health(Past Due) Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>