force-app/main/default/objects/Sales_Contest_Metrics__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <formula>Lead_Points__c + Activity_Points__c + Login_Points__c + Main_Contact_Health__c + Opportunities_Created_Points__c + Pipeline_Health_Past_Due_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>