force-app/main/default/objects/Sales_Contest_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Activity_Points__c</columns>
    <columns>Lead_Points__c</columns>
    <columns>Login_Points__c</columns>
    <columns>Main_Contact_Health__c</columns>
    <columns>Opportunities_Created_Points__c</columns>
    <columns>Pipeline_Health_Past_Due_Points__c</columns>
    <columns>Total_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>