force-app/main/default/objects/Sales_Contest_Metrics__c/listViews/lookup.listView-meta.xml
<ListView>
    <fullName>lookup</fullName>
    <columns>NAME</columns>
    <columns>Activity_Points__c</columns>
    <columns>Lead_Points__c</columns>
    <columns>Login_Points__c</columns>
    <columns>Main_Contact_Health__c</columns>
    <columns>Opportunities_Created_Points__c</columns>
    <columns>Pipeline_Health_Past_Due_Points__c</columns>
    <columns>Contestant_type__c</columns>
    <columns>Total_Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Adam N</value>
    </filters>
    <label>lookup</label>
    <language>en_US</language>
</ListView>